-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0 Beta 1
-
None
-
Win7 x86, MSVC 2010
-
0f3a10e37839afab8ae759e74369b992df8bc318 (qtquick1)
On the Linux SDK, there are directories under examples/declarative and examples/qtdeclarative, but these directories don't exist on the windows installation?
http://origin.releases.qt-project.org/qt5.0/beta-snapshots/2012-06-14_07-01-02/
- relates to
-
QTBUG-27823 Clashes in installation directory between qtdeclarative and qtquick1 examples
-
- Closed
-
For Gerrit Dashboard: QTBUG-26197 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
37612,7 | Updated QmlApplicationViewer for QtQuick1 examples | master | qt/qtquick1 | Status: MERGED | +2 | 0 |