Updated QmlApplicationViewer for QtQuick1 examples

- Copy the latest QmlApplicationViewer from qt-creator (4eedda04)
    - Include deployment.pri in qmlapplicationviewer.pri
    - Reorganize deployment.pri so that INSTALLS is generated for all
      plaforms (No INSTALLS was generated for non-unix platforms)
    - Remove Symbian-specific remnants (CAPABILITY, EPOCHEAPSIZE)

Task-number: QTBUG-26197
Change-Id: I329342ac8f49c52331f9558111cb192e08bd89d4
Reviewed-by: Leonard Lee <leonard.lee@digia.com>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@digia.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>
Reviewed-by: Jerome Pasion <jerome.pasion@digia.com>