examples/helper/helper.pro
@@ -2,6 +2,7 @@ TEMPLATE = subdirs
 
 # the helpers simply need a make install target, but require no compilation 
 sources.files = \
-	qmlapplicationviewer
+    qmlapplicationviewer \
+    deployment.pri
 sources.path = $$[QT_INSTALL_EXAMPLES]/qtdeclarative/helper
 INSTALLS += sources
